--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/ssr": "^17.1.3",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
+    "ngx-cookie-service": "^17.1.0",
     "ngx-markdown": "^17.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
